# shared

./: CMakeLists.txt  ConverterJSON.h  config.json  parth.h  requests.json  search_engine.cpp  search_engine.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
